# todo-list-api

./: LICENSE  README.md  compose.yaml  example.env  nginx.conf
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  example_jwt.py  exceptions.py  main.py  models.py  schemas.py  utils.py
